2011-06-20  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/layout.jl: add \\top \\bottom and \\left "flags" to
	defcustoms doc-string (\\w as compat-variant for \\left is kept). They
	let be choosen where to display the label, if it's a widget on it's
	own. (eg works with: number (= GtkSpinButton + GtkLabel), but not with
	choice (= GtkComboBoxText)).

	* themes/StyleTab/theme.jl: improved grouping and layout of options in
	SawfishConfig

2011-06-15  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/frames.jl: ensure that title-offsets really are
	correct when switching styles from SawfishConfig

2011-06-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/frames.jl: add an option to control the titlebar
	text position, both in vertical and horizontal direction. Added an
	ugly hack to ensure tab-adjustments are correct when switching between
	tabbed themes from SawfishConfig.

	* lisp/sawfish/wm/user.jl: load customized text-position on startup

	* themes/StyleTab/theme.jl: set title-x offsets so that
	update-text-position works properly with StyleTab

	* themes/gradient-tabbed/: added

	* themes/Makefile.in: updated

2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* themes/get-S-tabbed/
	* themes/brushed-metal/
	* themes/simple/
	* themes/smaker/
	* themes/mono/
	* themes/gtk/
	* themes/gradient/: removed

	* themes/candido/
	* themes/Zami-like/: added

	* themes/Makefile.in: updated

2011-05-22  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/frames.jl: fixed setting frame-font colors for
	states inactive-highlighted and inactive-clicked

	* themes/get-S-tabbed/theme.jl
	* themes/Crux/theme.jl
	* themes/mxflat/theme.jl
	* src/frames.c
	* src/sawfish_subrs.h
	* lisp/sawfish/wm/frames.jl: remove frame-font, fallback to
	default-font again. Instead offer options for changing frame-font
	according to the window state.

	* lisp/sawfish/wm/frames.jl: added option to adjust border-width and