@@ -1,3 +1,12 @@
+2011-07-09  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/frames.jl: added an option to control the
+	cursor-shape of all built-in titlebar buttons. A set of reasonable
+	values to choose from is provided. left_ptr is default for all
+	-- left_ptr is the general default shape.
+
+	* lisp/sawfish/wm/user.jl: load customized cursor-shapes on startup.
+	changed some if to when
+
 2011-06-20  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/cfg/layout.jl: add \\top \\bottom and \\left "flags" to
 	defcustoms doc-string (\\w as compat-variant for \\left is kept). They
